cmake_minimum_required(VERSION 3.25)
project(pre)

set(CMAKE_CXX_STANDARD 98)

#add_executable(pre main.cpp "05 数组/01-一维数组.cpp")
add_executable(pre "05 数组/01-一维数组的定义.cpp" "05 数组/02-数组名.cpp" "05 数组/03 五只小猪称体重.cpp" "05 数组/04 数组元素逆置.cpp" "05 数组/05 冒泡排序法.cpp" "05 数组/06 二维数组定义方式.cpp" "05 数组/07 二维数组数组名.cpp" "05 数组/08 二维数组应用案例.cpp")
