cmake_minimum_required(VERSION 3.25)
project(pre)

set(CMAKE_CXX_STANDARD 98)

#add_executable(pre main.cpp "05 数组/01-一维数组.cpp")
#add_executable(pre "05 数组/01-一维数组的定义.cpp" "05 数组/02-数组名.cpp" "05 数组/03 五只小猪称体重.cpp" "05 数组/04 数组元素逆置.cpp" "05 数组/05 冒泡排序法.cpp" "05 数组/06 二维数组定义方式.cpp" "05 数组/07 二维数组数组名.cpp" "05 数组/08 二维数组应用案例.cpp")
#add_executable(pre "06 函数/01 函数的定义.cpp" "06 函数/07 函数的分文件编写.cpp" "06 函数/swap.h" "06 函数/swap.cpp")
#add_executable(pre "07 指针/01 指针的定义和使用.cpp" "07 指针/02 指针所占内存空间.cpp" "07 指针/03 空指针和野指针.cpp" "07 指针/04 const修饰指针.cpp" "07 指针/05 指针和数组.cpp" "07 指针/06 指针和函数.cpp" "07 指针/BubbleSort.cpp" "07 指针/BubbleSort.h" "07 指针/07 指针数组和函数案例.cpp")
#add_executable(pre "08 结构体/01 结构体的定义和使用.cpp" "08 结构体/02 结构体数组.cpp" "08 结构体/03 结构体指针.cpp" "08 结构体/06 结构体中const的使用场景.cpp" "08 结构体/07 结构体案例1.cpp" "08 结构体/08 结构体案例2.cpp")
add_executable(pre )